--- a/package/inject_generator/pubspec.yaml
+++ b/package/inject_generator/pubspec.yaml
@@ -10,8 +10,8 @@ environment:
   sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
-  analyzer: ^0.34.0
-  build: ^1.0.0
+  analyzer: ^0.39.2+1
+  build: ^1.2.2
   code_builder: ^3.0.3
   collection: ^1.14.7
   dart_style: ^1.0.10
@@ -22,7 +22,7 @@ dependencies:
   stack_trace: ^1.9.2
 
 dev_dependencies:
-  build_runner: ^1.0.0
+  build_runner: ^1.7.2
   build_test: ^0.10.0
   inject:
     path: ../inject
